--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^1.0.0
   mobx_codegen: ^2.0.7+3
+  build_runner: ^2.2.0
 
 flutter:
   uses-material-design: true
