--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   mobx: ^2.0.7
+  page_transition: ^2.0.5
+  flutter_mobx: ^2.0.6+4
+  ionicons: ^0.1.2
 
 dev_dependencies:
   flutter_test:
