--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,3 +27,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  fonts:
+    - family: Inter
+      fonts:
+        - asset: fonts/inter-regular.otf
+        - asset: fonts/inter-bold.otf
+          weight: 700
