--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   flutter_mobx: ^2.0.6+4
   ionicons: ^0.1.2
   localstorage: ^4.0.0+1
-  toast: ^0.2.2
+  flutter_guid: ^0.2.0
 
 dev_dependencies:
   flutter_test:
